implemented toggle buttons

--- a/index.html
+++ b/index.html
@@ -120,6 +120,29 @@
                         <h3>Settings</h3>
 
                         <!-- two toggle buttons here-->
+                        <div class="email-toggle">
+                            <p>Send Email Notifications</p>
+                            <label class="switch-light switch-ios" onclick="">
+                                <input type="checkbox">
+                                <span>
+                                    <span>Off</span>
+                                    <span>On</span>
+                                    <a></a>
+                                </span>
+                            </label>
+                        </div>
+
+                        <div class="profile-toggle">
+                            <p>Set Profile to Public</p>
+                            <label class="switch-light switch-ios" onclick="">
+                                <input type="checkbox">
+                                <span>
+                                    <span>Off</span>
+                                    <span>On</span>
+                                    <a></a>
+                                </span>
+                            </label>
+                        </div>
 
                         <select>
                             <option disabled selected>Select a Timezone</option>
