--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
             </nav>
             <main class='site-main'>
                 <div class="dashboard-header">
-                    <h2>Dashboard</h2>
+                    <div class="dashboard-title">
+                        <h2>Dashboard</h2>
+                    </div>  
                     <div class="dashboard-search">
-                        <input type="search" placeholder="search...">
+                            <input type="search" placeholder="search...">
                     </div>
                 </div>
                 <section id="alerts" class="alerts">
