--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
                     <select id="timezone">
                         <option disabled selected>Select a Timezone</option>
                         <option>Eastern</option>
-                        <option>Western</option>
                         <option>Central</option>
+                        <option>Mountain</option>
+                        <option>Pacific</option>
                     </select>
 
                     <div class="settings-buttons">
