--- a/index.html
+++ b/index.html
@@ -112,11 +112,14 @@
 
                 <section class="message-user">
                     <h3>Message User</h3>
-                    <form>
-                        <input type="text" placeholder="Search for User" id="user-field">
+                    <form autocomplete="off">
+                        <div class="autocomplete">
+                            <input type="text" placeholder="Search for User" id="user-field">
+                        </div>
                         <textarea placeholder="Message for User" id="message-field"></textarea>
                         <button type="button" id="send">Send</button>
                     </form>
+                    <script src="js/test.js"></script>
                 </section>
 
                 <section class="settings" id="settings">
