autocomplete refactoring and final style touches

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <textarea placeholder="Message for User" id="message-field"></textarea>
                         <button type="button" id="send">Send</button>
                     </form>
-                    <script src="js/test.js"></script>
+                    <script src="js/autocomplete.js"></script>
                 </section>
 
                 <section class="settings" id="settings">
