--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                     <div class="dropdown">
                         <img src="svgs/bell.svg" class="svg" id="bell" alt="bell">
                         <div class="dropdown-content" id="notif-dropdown">
-                            <a href="#members">Send a message to Victoria</a>
-                            <a href="#members">Send a message to Dale</a>
+                            <a href="#members">You have 1 new message from Victoria</a>
+                            <a href="#members">You have 2 new messages from Dale</a>
                         </div>
                         <div id="notifications"></div>
                     </div>
